--- a/app/src/main/res/layout/activity_etiketka.xml
+++ b/app/src/main/res/layout/activity_etiketka.xml
@@ -605,16 +605,18 @@
                         android:textAlignment="viewEnd"
                         android:textColor="@android:color/black"
                         android:textSize="10dp" />
+
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
 
-            <RelativeLayout
-                android:id="@+id/printrel"
-                android:layout_width="200dp"
-                android:layout_height="200dp">
+            <View
+                android:id="@+id/i"
+                android:layout_width="match_parent"
 
-            </RelativeLayout>
+                android:layout_height="2dp"
+                android:layout_weight="1"
+                android:background="@android:color/black" />
         </LinearLayout>
 
     </LinearLayout>
