--- a/app/src/main/res/layout/superviser_list_item_layout.xml
+++ b/app/src/main/res/layout/superviser_list_item_layout.xml
@@ -54,79 +54,74 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="100">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="vertical"
-                android:layout_weight="30">
+                android:layout_height="wrap_content"
+                android:layout_weight="30"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_otkuda"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:text="Hello"
-                    android:textColor="@android:color/black"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
                     style="@style/TextBlackList"
-                    />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Hello"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_otpravitel"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:text="Hello"
-                    android:textColor="@color/otpravitelRed"
-                    android:textAlignment="center"
                     style="@style/TextBlackList"
-                    />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Hello"
+                    android:textAlignment="center"
+                    android:textColor="@color/otpravitelRed" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:orientation="vertical"
-                android:layout_weight="40">
+                android:layout_weight="40"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/iv_strela"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/right_arrow"
-                    />
+                    android:src="@drawable/right_arrow" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="vertical"
-                android:layout_weight="30">
+                android:layout_height="wrap_content"
+                android:layout_weight="30"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_kuda"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:text="Hello"
-                    android:textColor="@android:color/black"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
                     style="@style/TextBlackList"
-                    />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Hello"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_poluchatel"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:text="Hello"
-                    android:textColor="@color/colorAccent"
-                    android:textAlignment="center"
                     style="@style/TextBlackList"
-                    />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Hello"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorAccent" />
 
             </LinearLayout>
 
@@ -134,13 +129,12 @@
 
         <TextView
             android:id="@+id/tv_manager"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:textColor="@android:color/black"
-            android:textAlignment="center"
-            android:text="Hello"
             style="@style/TextBlackList"
-            />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Hello"
+            android:textAlignment="center"
+            android:textColor="@android:color/black" />
 
     </LinearLayout>
 
