--- a/app/src/main/res/layout-xlarge/activity_reception.xml
+++ b/app/src/main/res/layout-xlarge/activity_reception.xml
@@ -71,14 +71,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Заказчик: "
-                        style="@style/TextBoldBlack" />
+                        style="@style/TextBoldBlack"
+                        />
 
                     <TextView
                         android:id="@+id/tv_zakazchic"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="120dp"
-                        android:text="заказчик"
+                        android:layout_marginLeft="57dp"
+                        android:text="//заказчик"
                         style="@style/TextPlainBlack"
                         />
 
@@ -100,8 +101,8 @@
                         android:id="@+id/tv_otpravitel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="58dp"
-                        android:text="отправитель"
+                        android:layout_marginLeft="25dp"
+                        android:text="//отправитель"
                         style="@style/TextPlainBlack"/>
                 </LinearLayout>
 
@@ -121,7 +122,7 @@
                         android:id="@+id/tv_poluchatel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="80dp"
+                        android:layout_marginLeft="35dp"
                         android:text="получатель"
                         style="@style/TextPlainBlack"/>
                 </LinearLayout>
@@ -132,49 +133,41 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:weightSum="100"
-                    android:paddingTop="3dp"
-                    android:paddingBottom="3dp">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/tv_ves"
+                        style="@style/TextBoldBlack"
+                        android:layout_marginBottom="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="50"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
                         android:ems="6"
-                        style="@style/TextBoldBlack"
                         android:text="Вес факт" />
 
                     <EditText
                         android:id="@+id/et_ves_fact"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="50"
                         android:inputType="numberDecimal"
                         android:ems="10"
                         style="@style/TextPlainBlack"
                         android:layout_toEndOf="@+id/tv_ves"/>
 
-                </LinearLayout>
+                </RelativeLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:weightSum="100"
-                    android:paddingTop="3dp"
-                    android:paddingBottom="3dp">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/tv_obem"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="50"
+                        android:layout_marginBottom="8dp"
                         android:text="Объем факт"
                         android:ems="6"
                         style="@style/TextBoldBlack" />
@@ -183,27 +176,23 @@
                         android:id="@+id/et_obem_fact"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="50"
                         android:ems="10"
                         android:inputType="numberDecimal"
-                        style="@style/TextPlainBlack" />
+                        style="@style/TextPlainBlack"
+                        android:layout_toEndOf="@+id/tv_obem"/>
 
-                </LinearLayout>
+                </RelativeLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:weightSum="100"
-                    android:paddingTop="3dp"
-                    android:paddingBottom="3dp">
+                    >
 
                     <TextView
                         android:id="@+id/tv_kol"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="50"
+                        android:layout_marginBottom="8dp"
                         android:text="Количество"
                         style="@style/TextBoldBlack"
                         android:ems="6"/>
@@ -212,27 +201,23 @@
                         android:id="@+id/et_kolich"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
                         android:ems="10"
-                        android:layout_weight="50"
+                        android:layout_toEndOf="@+id/tv_kol"
                         android:inputType="numberDecimal"
                         style="@style/TextPlainBlack"/>
 
-                </LinearLayout>
+                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="100"
-                    android:paddingTop="2dp"
-                    android:paddingBottom="2dp">
+                    android:weightSum="100">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="57"
+                        android:layout_marginBottom="12dp"
                         android:text="Упаковка"
                         style="@style/TextBoldBlack" />
 
@@ -240,11 +225,12 @@
                         android:id="@+id/spin_upakovka"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="43"
+                        android:layout_marginLeft="47dp"
+                        android:layout_weight="20"
                         android:ems="10"
                         android:inputType="textPersonName"
-                        style="@style/TextPlainBlack" />
+                        style="@style/TextPlainBlack"
+                        />
 
                 </LinearLayout>
 
@@ -312,7 +298,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:textSize="25dp"
                             android:ems="20"
                             android:inputType="textMultiLine"
                             android:text="Text" />
@@ -366,58 +351,57 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:layout_marginTop="5dp"
                         android:orientation="vertical">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:weightSum="100"
-                            android:paddingBottom="3dp"
-                            android:paddingTop="3dp">
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/tv_8"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="20"
-                                android:layout_gravity="center_vertical"
+                                android:layout_weight="1"
                                 android:text="Транспорт: "
                                 style="@style/TextBlueBold" />
 
+                            <!--<Spinner-->
+                                <!--android:id="@+id/spin_transport"-->
+                                <!--android:layout_width="match_parent"-->
+                                <!--android:layout_height="match_parent"-->
+                                <!--android:layout_weight="1"-->
+                                <!--style="@style/TextPlainBlack" />-->
                             <AutoCompleteTextView
                                 android:id="@+id/spin_transport"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_weight="80"
+                                android:layout_weight="1"
                                 style="@style/TextPlainBlack" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal"
-                            android:weightSum="100"
-                            android:paddingTop="3dp"
-                            android:paddingBottom="3dp">
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/sopDoc"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_weight="50"
+                                android:layout_marginBottom="12dp"
+                                android:layout_weight="1"
                                 android:text="Сопроводительный документ"
                                 style="@style/TextBlueBold" />
 
                             <Spinner
                                 android:id="@+id/spinner_soprDoc"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_weight="50"
+                                android:layout_marginBottom="8dp"
+                                android:layout_weight="1"
                                 style="@style/TextPlainBlack"/>
                         </LinearLayout>
 
@@ -425,30 +409,26 @@
                             android:id="@+id/sopr"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_weight="1"
                             android:orientation="horizontal"
-                            android:visibility="gone"
-                            android:weightSum="100"
-                            android:paddingTop="3dp"
-                            android:paddingBottom="3dp">
+                            android:layout_marginBottom="5dp"
+                            android:visibility="gone">
 
                             <TextView
                                 android:id="@+id/textView7"
                                 style="@style/TextBlueBold"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_weight="50"
-                                android:ems="6"
+                                android:layout_weight="1"
                                 android:text="Другое:"/>
 
                             <EditText
                                 android:id="@+id/drug"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_gravity="center_vertical"
-                                android:layout_weight="50"
+                                android:layout_weight="1"
                                 android:ems="10"
-                                android:textSize="35dp"
+                                android:textSize="30dp"
                                 android:hint="Введите название"
                                 android:inputType="textPersonName" />
                         </LinearLayout>
@@ -456,55 +436,40 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal"
-                            android:weightSum="100">
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/textView5"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_weight="50"
-                                android:ems="6"
+                                android:layout_weight="1"
                                 android:text="Номер:"
                                 android:textAppearance="@style/TextBlueBold" />
 
                             <EditText
                                 android:id="@+id/sopnum"
                                 style="@style/Widget.AppCompat.EditText"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_weight="50"
-                                android:textSize="35dp"
+                                android:layout_width="81dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
                                 android:ems="10"
                                 android:inputType="textPersonName" />
 
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:weightSum="100">
-
                             <TextView
                                 android:id="@+id/textView6"
-                                android:layout_width="wrap_content"
+                                android:layout_width="44dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_weight="50"
-                                android:ems="6"
+                                android:layout_weight="1"
                                 android:text="Дата:"
                                 android:textAppearance="@style/TextBlueBold" />
 
                             <EditText
                                 android:id="@+id/sopdate"
                                 style="@android:style/Widget.DeviceDefault.EditText"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_weight="50"
-                                android:textSize="35dp"
+                                android:layout_width="168dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
                                 android:ems="10"
                                 android:inputType="date" />
                         </LinearLayout>
@@ -513,8 +478,7 @@
                             android:id="@+id/l1"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal"
-                            android:weightSum="2">
+                            android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/tv_5"
