--- a/app/src/main/res/layout-large/activity_reception.xml
+++ b/app/src/main/res/layout-large/activity_reception.xml
@@ -237,7 +237,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="50"
-                        android:text="Стоймость груза"
+                        android:text="Стоимость груза"
                         style="@style/TextBoldBlack"
                         android:ems="6"/>
                     <EditText
