--- a/app/src/main/res/layout-xlarge/activity_reception.xml
+++ b/app/src/main/res/layout-xlarge/activity_reception.xml
@@ -218,6 +218,65 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:weightSum="100"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp">
+
+                    <TextView
+                        android:id="@+id/tv_stoimostGruza"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="50"
+                        android:text="Стоимость груза"
+                        style="@style/TextBoldBlack"
+                        android:ems="6"/>
+
+                    <EditText
+                        android:id="@+id/et_stoimostGruza"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="50"
+                        android:ems="10"
+                        android:inputType="numberDecimal"
+                        style="@style/TextPlainBlack"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="100"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp">
+
+                    <TextView
+                        android:id="@+id/tv_valuta"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="57"
+                        android:text="Валюта"
+                        style="@style/TextBoldBlack"
+                        android:ems="6"/>
+
+                    <Spinner
+                        android:id="@+id/spin_valuta"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="43"
+                        android:ems="10"
+                        android:inputType="textPersonName"
+                        style="@style/TextPlainBlack" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="100"
                     android:paddingTop="2dp"
